Fix padding for formats with mutliple padded values. PR lib/57633, fix from FreeBSD.